crates/oxc_react_compiler/tests/snapshots/for-logical.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-logical.js
---
function foo(props) {
	let y = 0;
	for (let x = 0; x > props.min && x < props.max; x = x + (props.cond ? props.increment : 2), x) {
		x = x * 2;
		y = y + x;
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
