crates/oxc_react_compiler/tests/snapshots/for-loop-counter-memoization.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-loop-counter-memoization.js
---
import { c as _c } from "react/compiler-runtime";
import { Stringify } from "shared-runtime";
function Component(t0) {
	const $ = _c(2);
	const { count } = t0;
	let t1;
	if ($[0] !== count) {
		let a = 0;
		const items = [];
		for (let i = 0; i < count; i++) {
			a++;
			items.push(a);
		}
		t1 = <Stringify items={items} a={a} />;
		$[0] = count;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ count: 2 }],
	sequentialRenders: [
		{ count: 2 },
		{ count: 2 },
		{ count: 3 }
	]
};
