crates/oxc_react_compiler/tests/snapshots/for-loop-let-undefined-decl.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/for-loop-let-undefined-decl.js
---
// These variables are unknown to useFoo, as they are
// defined at module scope or implicit globals
const isSelected = false;
const isCurrent = true;
function useFoo() {
	for (let i = 0; i <= 5; i++) {
		let color;
		if (isSelected) {
			color = isCurrent ? "#FFCC22" : "#FF5050";
		} else {
			color = isCurrent ? "#CCFF03" : "#CCCCCC";
		}
		console.log(color);
	}
}
export const FIXTURE_ENTRYPOINT = {
	params: [],
	fn: useFoo
};
